# motion_detecting

./: .gitignore  README.md
Motion_Detecting/: CMakeLists.txt  README.md
Motion_Detecting/main/: CMakeLists.txt  buzzer_task.c  buzzer_task.h  detecting_main.c  detecting_task.c  detecting_task.h  light_task.c  light_task.h  main.c
Motion_Server/: CMakeLists.txt  README.md
Motion_Server/main/: CMakeLists.txt  motion_main.c  motion_server.c  motion_server.h
Motion_Server/main/index/: index.html
